google,discord and github/me criados, openapi do src removido, update do open api e dos controllers , npm install jstoxml
