# src/express-server/api/openapi.yaml
@@ -34,6 +34,78 @@ paths:
       - Users
       x-eov-operation-handler: controllers/UsersController
 
+  /github/me:
+    get:
+      summary: Devolve as informações do perfil do utilizador autenticado via GitHub
+      tags:
+      - Users
+      security:
+      - OAuth2Github: []
+      responses:
+        "200":
+          description: Sucesso. Devolve mensagem de boas-vindas e dados do utilizador.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  user:
+                    $ref: "#/components/schemas/User"
+        "401":
+          description: Não autenticado
+        "403":
+          description: Acesso negado. Apenas logins via Github permitidos aqui.
+
+  /google/me:
+    get:
+      summary: Devolve as informações do perfil do utilizador autenticado via Google
+      tags:
+      - Users
+      security:
+      - OAuth2Google: []
+      responses:
+        "200":
+          description: Sucesso. Devolve mensagem de boas-vindas e dados do utilizador.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  user:
+                    $ref: "#/components/schemas/User"
+        "401":
+          description: Não autenticado
+        "403":
+          description: Acesso negado. Apenas logins via Google permitidos aqui.
+
+  /discord/me:
+    get:
+      summary: Devolve as informações do perfil do utilizador autenticado via Discord
+      tags:
+      - Users
+      security:
+      - OAuth2Discord: []
+      responses:
+        "200":
+          description: Sucesso. Devolve mensagem de boas-vindas e dados do utilizador.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  user:
+                    $ref: "#/components/schemas/User"
+        "401":
+          description: Não autenticado
+        "403":
+          description: Acesso negado. Apenas logins via Discord permitidos aqui.
+
   /workouts/public:
     get:
       operationId: workoutsPublicGET
