# src/express-server/controllers/WorkoutsController.js
@@ -7,30 +7,79 @@
  */
 
 const Controller = require('./Controller');
-const service = require('../services/WorkoutsService');
+const Service = require('../services/WorkoutsService');
+const { toXML } = require('jstoxml');
 
 const workoutsPublicGET = async (request, response) => {
-  await Controller.handleRequest(request, response, () => service.workoutsPublicGET(request));
+  try {
+    const data = await Service.workoutsPublicGET(request);
+    const responseData = data.payload || data;
+    response.format({
+      'application/json': () => {
+        response.status(200).json(responseData);
+      },
+      'application/xml': () => {
+        const plainData = JSON.parse(JSON.stringify(responseData));
+        const xmlData = toXML({ workouts: { workout: plainData } }, { header: true, indent: '  ' });
+        response.status(200).type('application/xml').send(xmlData);
+      },
+      'default': () => response.status(406).send('Not Acceptable')
+    });
+  } catch (error) {
+    response.status(error.code || 500).json({ error: error.message });
+  }
 };
 
 const workoutsMeGET = async (request, response) => {
-  await Controller.handleRequest(request, response, () => service.workoutsMeGET(request));
-};
-
-const workoutsPOST = async (request, response) => {
-  await Controller.handleRequest(request, response, () => service.workoutsPOST(request));
-};
-
-const workoutsIdDELETE = async (request, response) => {
-  await Controller.handleRequest(request, response, () => service.workoutsIdDELETE(request));
+  try {
+    const data = await Service.workoutsMeGET(request);
+    const responseData = data.payload || data;
+    response.format({
+      'application/json': () => {
+        response.status(200).json(responseData);
+      },
+      'application/xml': () => {
+        const plainData = JSON.parse(JSON.stringify(responseData));
+        const xmlData = toXML({ workouts: { workout: plainData } }, { header: true, indent: '  ' });
+        response.status(200).type('application/xml').send(xmlData);
+      },
+      'default': () => response.status(406).send('Not Acceptable')
+    });
+  } catch (error) {
+    response.status(error.code || 500).json({ error: error.message });
+  }
 };
 
 const workoutsIdGET = async (request, response) => {
-  await Controller.handleRequest(request, response, () => service.workoutsIdGET(request));
+  try {
+    const data = await Service.workoutsIdGET(request);
+    const responseData = data.payload || data;
+    response.format({
+      'application/json': () => {
+        response.status(200).json(responseData);
+      },
+      'application/xml': () => {
+        const plainData = JSON.parse(JSON.stringify(responseData));
+        const xmlData = toXML({ workout: plainData }, { header: true, indent: '  ' });
+        response.status(200).type('application/xml').send(xmlData);
+      },
+      'default': () => response.status(406).send('Not Acceptable')
+    });
+  } catch (error) {
+    response.status(error.code || 500).json({ error: error.message });
+  }
+};
+
+const workoutsPOST = async (request, response) => {
+  await Controller.handleRequest(request, response, () => Service.workoutsPOST(request));
+};
+
+const workoutsIdDELETE = async (request, response) => {
+  await Controller.handleRequest(request, response, () => Service.workoutsIdDELETE(request));
 };
 
 const workoutsIdPUT = async (request, response) => {
-  await Controller.handleRequest(request, response, () => service.workoutsIdPUT(request));
+  await Controller.handleRequest(request, response, () => Service.workoutsIdPUT(request));
 };
 
 module.exports = {
